--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
@@ -1,32 +1,34 @@
 +++
-title = "०३"
+title = "०३ मदनदहनः"
 
 +++
 
-.  
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga03-1-15.mp3"></div>
 
 तृतीयः सर्गः  
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्मिन्मघोनस्त्रिदशान्विहाय सहस्त्रमक्ष्णां युगपत्पपात ।  
-प्रयोजनाऽपेक्षितया प्रभूणां प्रायश्चलंकत गौरवमाश्रितेषु ॥ 3.1 ॥  
+तस्मिन् मघोनस् त्रिदशान् **विहाय**  
+सहस्रम् अक्ष्णां युगपत् **पपात** ।  
+प्रयोजनाऽपेक्षितया प्रभूणां  
+प्रायश्-चलं गौरवम् आश्रितेषु ॥ 3.1 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तस्मिन्मघोनस्त्रिदशान्विहाय सहस्त्रमक्ष्णां युगपत्पपात ।  
-प्रयोजनाऽपेक्षितया प्रभूणां प्रायश्चलंकत गौरवमाश्रितेषु ॥ 3.1 ॥  
+तस्मिन्मघोनस्त्रिदशान्विहाय सहस्रमक्ष्णां युगपत्पपात ।  
+प्रयोजनाऽपेक्षितया प्रभूणां प्रायश्चलं गौरवमाश्रितेषु ॥ 3.1 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-मघोन अक्ष्णां सहस्त्रं त्रिदशान् विहाय तस्मिन् युगपत् पपात । प्रायः प्रभूणाम् आश्रितेषु गौरवं प्रयोजनाऽपेक्षितया चलम् ।  
+मघोन अक्ष्णां सहस्रं त्रिदशान् विहाय तस्मिन् युगपत् पपात । प्रायः प्रभूणाम् आश्रितेषु गौरवं प्रयोजनाऽपेक्षितया चलम् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-तस्मिन्निति । मघोन इन्द्रस्याक्ष्णां सहस्त्रं त्रिरावृत्ता दशपरिमाणमेषामिति त्रिदशान्देवान् । 'संख्ययाव्ययासन्नादूराधिकसंख्याः संख्येये' इति बहुव्रीहिः । 'बहुव्रीहौ संख्येये-' इति डच्प्रत्ययः । उक्तार्थत्वात्सुचो निवृत्तिः । विहाय त्यक्तवा तस्मिन्कामे युगपत्पपात । सहस्त्रेणाक्षिभिरद्राक्षीदित्त्यादरातिशयोक्तिः । ननु सुचिरपरित्यगेन भगवतो महेन्द्रस्य कथमकाण्डे तस्मिन्नेकस्मिन्पक्षपात इत्याशङ्क्यार्थान्तरं न्यस्यति- प्रायो भूम्ना प्रभूणामाश्रितेषु सेवकेषु विषये गौरवमादरः प्रयोजनापेक्षितया कार्यार्थित्वेन हेतुना चलं चञ्चलम् । फलतन्त्राः प्रभवो न तु गुणतन्त्रा इति भावः ॥ 3.1 ॥
+तस्मिन्निति । मघोन इन्द्रस्याक्ष्णां सहस्रं त्रिरावृत्ता दशपरिमाणमेषामिति त्रिदशान्देवान् । 'संख्ययाव्ययासन्नादूराधिकसंख्याः संख्येये' इति बहुव्रीहिः । 'बहुव्रीहौ संख्येये-' इति डच्प्रत्ययः । उक्तार्थत्वात्सुचो निवृत्तिः । विहाय त्यक्तवा तस्मिन्कामे युगपत्पपात । सहस्रेणाक्षिभिरद्राक्षीदित्त्यादरातिशयोक्तिः । ननु सुचिरपरित्यगेन भगवतो महेन्द्रस्य कथमकाण्डे तस्मिन्नेकस्मिन्पक्षपात इत्याशङ्क्यार्थान्तरं न्यस्यति- प्रायो भूम्ना प्रभूणामाश्रितेषु सेवकेषु विषये गौरवमादरः प्रयोजनापेक्षितया कार्यार्थित्वेन हेतुना चलं चञ्चलम् । फलतन्त्राः प्रभवो न तु गुणतन्त्रा इति भावः ॥ 3.1 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -254,7 +256,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-अथेति ॥ अथ स्मरवाक्यश्रवणानन्तरमाखण्डलः सहस्त्राक्षऊरुदेशात्पादमाक्रमणेन संभावेतं पादपीठं यस्मिंस्तद्यथा तथावतार्थं संकल्पितार्थे हरचिताकर्षणरूपे विषये विवृतात्मशक्तिम् । 'कुर्यां हरस्यापि-' (3/10) इत्यादिना प्रकटीकृतस्वसामर्थ्य कामं स्मरमिदं वक्ष्यमाणां बभाषे ॥ 3.11 ॥
+अथेति ॥ अथ स्मरवाक्यश्रवणानन्तरमाखण्डलः सहस्राक्षऊरुदेशात्पादमाक्रमणेन संभावेतं पादपीठं यस्मिंस्तद्यथा तथावतार्थं संकल्पितार्थे हरचिताकर्षणरूपे विषये विवृतात्मशक्तिम् । 'कुर्यां हरस्यापि-' (3/10) इत्यादिना प्रकटीकृतस्वसामर्थ्य कामं स्मरमिदं वक्ष्यमाणां बभाषे ॥ 3.11 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
