--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -1276,7 +1276,7 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-त्रिभागेति । किंचेति चार्थः । शिष्यत इति शेषः । कर्मणि घञ् । निभ्यो भागेभ्यः शेषास्वशिष्टासु । यद्वा रात्रेस्त्रियामत्वेन प्रसिद्धत्वात्तृतीयो भागास्त्रिभागः । संख्याशब्दस्य वृत्तिविषये पूरणार्थत्वमिष्यते । यथा 'शतांशः' 'सहस्त्रांशः' इति । त्रिभागः शेषो यासां तासु निशासु क्षणं क्षणमात्रं नेत्रे निमील्य मीलचित्वा सहसा सद्यः । हे नीलकण्ठ ! क्व व्हजसि कुव गच्छसीत्यलक्ष्या निर्विषया वाग्वयवनं यस्याः सा यथोक्ता तथोक्ता तथासत्ये मिथ्याभूते कण्ठेऽर्पितं बाहुबन्धनं यस्याः सा यथोक्ता तथासत्ये मिथ्याभूते कण्ठेऽर्पितं बाहुबन्धनं यस्याः सा तथा सती व्यबुध्यत विबुद्धवती । एतेन जागरोन्मादौ सूचितौ ॥ 5.57 ॥
+त्रिभागेति । किंचेति चार्थः । शिष्यत इति शेषः । कर्मणि घञ् । निभ्यो भागेभ्यः शेषास्वशिष्टासु । यद्वा रात्रेस्त्रियामत्वेन प्रसिद्धत्वात्तृतीयो भागास्त्रिभागः । संख्याशब्दस्य वृत्तिविषये पूरणार्थत्वमिष्यते । यथा 'शतांशः' 'सहस्रांशः' इति । त्रिभागः शेषो यासां तासु निशासु क्षणं क्षणमात्रं नेत्रे निमील्य मीलचित्वा सहसा सद्यः । हे नीलकण्ठ ! क्व व्हजसि कुव गच्छसीत्यलक्ष्या निर्विषया वाग्वयवनं यस्याः सा यथोक्ता तथोक्ता तथासत्ये मिथ्याभूते कण्ठेऽर्पितं बाहुबन्धनं यस्याः सा यथोक्ता तथासत्ये मिथ्याभूते कण्ठेऽर्पितं बाहुबन्धनं यस्याः सा तथा सती व्यबुध्यत विबुद्धवती । एतेन जागरोन्मादौ सूचितौ ॥ 5.57 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
