--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
@@ -145,23 +145,23 @@ title = "०६"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधःप्रस्थापिताश्वेन समावर्जितकेतुना ।  
-सहस्त्ररश्मिना साक्षात्सप्रणाममुदीक्षिताः ॥ 6.7 ॥  
+सहस्ररश्मिना साक्षात्सप्रणाममुदीक्षिताः ॥ 6.7 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 अधःप्रस्थापिताश्वेन समावर्जितकेतुना ।  
-सहस्त्ररश्मिना साक्षात्सप्रणाममुदीक्षिताः ॥ 6.7 ॥  
+सहस्ररश्मिना साक्षात्सप्रणाममुदीक्षिताः ॥ 6.7 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-अधःप्रस्थापिताऽश्वेन समावर्जितकेतुना सहस्त्ररश्मिना साक्षात् सप्रणामम् उदीक्षिताः (ते प्रादुरासन्) ।  
+अधःप्रस्थापिताऽश्वेन समावर्जितकेतुना सहस्ररश्मिना साक्षात् सप्रणामम् उदीक्षिताः (ते प्रादुरासन्) ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-अध इति । अधः प्रस्थापिताश्वेन । सूर्यमण्डलोपरिवर्तित्वात्सप्तर्षिमण्डलस्येति भावः । समावर्जितकेतुना तन्मण्डलाघातशङ्कया नमितध्वजेन सहस्त्ररश्मिना सूर्येण साक्षात्स्वयमेव सप्रणामदुदीक्षिताः । गमनाभ्यनुज्ञादानपर्यन्तमित्यर्थः । भगवतः सूर्यस्याप्युपास्या इति भावः ॥ 6.7 ॥
+अध इति । अधः प्रस्थापिताश्वेन । सूर्यमण्डलोपरिवर्तित्वात्सप्तर्षिमण्डलस्येति भावः । समावर्जितकेतुना तन्मण्डलाघातशङ्कया नमितध्वजेन सहस्ररश्मिना सूर्येण साक्षात्स्वयमेव सप्रणामदुदीक्षिताः । गमनाभ्यनुज्ञादानपर्यन्तमित्यर्थः । भगवतः सूर्यस्याप्युपास्या इति भावः ॥ 6.7 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
