--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
@@ -877,25 +877,25 @@ title = "०७"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुराणां सेवाप्रकारमेवाह-  
-उपाददे तस्य सहस्त्ररश्मिस्त्वष्ट्रा नवं निर्मितमातपत्रम् ।  
+उपाददे तस्य सहस्ररश्मिस्त्वष्ट्रा नवं निर्मितमातपत्रम् ।  
 स तद्दुकूलादविदूरमौलिर्बभौ पतद्गङ्ग इवोत्तमाङ्गे ॥ 7.41 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 सुराणां सेवाप्रकारमेवाह-  
-उपाददे तस्य सहस्त्ररश्मिस्त्वष्ट्रा नवं निर्मितमातपत्रम् ।  
+उपाददे तस्य सहस्ररश्मिस्त्वष्ट्रा नवं निर्मितमातपत्रम् ।  
 स तद्दुकूलादविदूरमौलिर्बभौ पतद्गङ्ग इवोत्तमाङ्गे ॥ 7.41 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-तस्य सहस्त्ररश्मिः त्वष्ट्रा निर्मितं नवम् आतपत्रम् उपाददे । तद्दुकूलात् अविदूरमौलिः स उत्तमाऽङ्गे पतद्गङ्ग इव बभौ ।  
+तस्य सहस्ररश्मिः त्वष्ट्रा निर्मितं नवम् आतपत्रम् उपाददे । तद्दुकूलात् अविदूरमौलिः स उत्तमाऽङ्गे पतद्गङ्ग इव बभौ ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-उपादद इति । तस्य हरस्य सहस्त्ररश्मिः सूर्यस्त्वष्ट्रा वश्वकर्मणा निर्मितं नवमातपत्रमुपाददे । धृतवानित्यर्थः । उत्प्रेक्षते- तद्दुकूलात्तस्यातपत्रस्य प्रान्तलम्बिनो दुकूलादविदूरमौलिः । तद्दुकूलस्यासन्नमौलिरित्यर्थः । स हर उत्तमाङ्गे शिरसि । 'उत्तमाङ्गं शिरः शीर्षम्' इत्यमरः । पतन्ती गङ्गा यस्य स पतद्गङ्ग इव बभौ । तद्दुकूलादित्यत्र 'दूरान्तिकार्थैः षष्ट्यन्यतरस्याम्' इति दूरार्थयोगे विकल्पेन पञ्चमी । नाथेनोक्तम् 'अन्यारात्-' इत्यवाराच्छब्दस्यार्थग्रहणार्थत्वात् पञ्चमीति तदनाकरम् । किंचास्य शास्त्रोक्तविकल्पापवादत्वात् 'दूरं ग्रामस्य' इत्यादि षष्ठीप्रयोगो दूरापास्तः स्यादित्युपेक्षणीयमेव ॥ 7.41 ॥
+उपादद इति । तस्य हरस्य सहस्ररश्मिः सूर्यस्त्वष्ट्रा वश्वकर्मणा निर्मितं नवमातपत्रमुपाददे । धृतवानित्यर्थः । उत्प्रेक्षते- तद्दुकूलात्तस्यातपत्रस्य प्रान्तलम्बिनो दुकूलादविदूरमौलिः । तद्दुकूलस्यासन्नमौलिरित्यर्थः । स हर उत्तमाङ्गे शिरसि । 'उत्तमाङ्गं शिरः शीर्षम्' इत्यमरः । पतन्ती गङ्गा यस्य स पतद्गङ्ग इव बभौ । तद्दुकूलादित्यत्र 'दूरान्तिकार्थैः षष्ट्यन्यतरस्याम्' इति दूरार्थयोगे विकल्पेन पञ्चमी । नाथेनोक्तम् 'अन्यारात्-' इत्यवाराच्छब्दस्यार्थग्रहणार्थत्वात् पञ्चमीति तदनाकरम् । किंचास्य शास्त्रोक्तविकल्पापवादत्वात् 'दूरं ग्रामस्य' इत्यादि षष्ठीप्रयोगो दूरापास्तः स्यादित्युपेक्षणीयमेव ॥ 7.41 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1345,23 +1345,23 @@ title = "०७"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तासां मुखैरासवगन्धगर्भैर्व्याप्तान्तराः सान्द्रकुतूहलानाम् ।  
-विलोलनेत्रभ्रमरैर्गवाक्षाः सहस्त्रपत्त्राभरणा इवासन् ॥ 7.62 ॥  
+विलोलनेत्रभ्रमरैर्गवाक्षाः सहस्रपत्त्राभरणा इवासन् ॥ 7.62 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 तासां मुखैरासवगन्धगर्भैर्व्याप्तान्तराः सान्द्रकुतूहलानाम् ।  
-विलोलनेत्रभ्रमरैर्गवाक्षाः सहस्त्रपत्त्राभरणा इवासन् ॥ 7.62 ॥  
+विलोलनेत्रभ्रमरैर्गवाक्षाः सहस्रपत्त्राभरणा इवासन् ॥ 7.62 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-सान्द्रकुतूहलानां तासाम् आसवगन्धगर्भैः विलोलनेत्रभ्रमरैः मुखैः व्याप्ताऽन्तरा गवाक्षा सहस्त्रपत्त्राभरणा इव आसन् ।  
+सान्द्रकुतूहलानां तासाम् आसवगन्धगर्भैः विलोलनेत्रभ्रमरैः मुखैः व्याप्ताऽन्तरा गवाक्षा सहस्रपत्त्राभरणा इव आसन् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-तासामिति । तदानीं सान्द्रकुतूहलानां तासां स्त्रोणामासवगन्धो गर्भे येषां तैः । विलोलानि नेत्राण्येव भ्रमरा येषु तैर्मुखेर्व्याप्तान्तराश्छन्नावकाशा गवाक्षाः सहस्त्रपत्त्राभरणा इवासन् । कमलालंकृता इव स्थिता इत्यथः ॥ 7.62 ॥
+तासामिति । तदानीं सान्द्रकुतूहलानां तासां स्त्रोणामासवगन्धो गर्भे येषां तैः । विलोलानि नेत्राण्येव भ्रमरा येषु तैर्मुखेर्व्याप्तान्तराश्छन्नावकाशा गवाक्षाः सहस्रपत्त्राभरणा इवासन् । कमलालंकृता इव स्थिता इत्यथः ॥ 7.62 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
