--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
@@ -987,26 +987,26 @@ title = "०८"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सामभिः सहचराः सहस्त्रशः (4)स्यन्दनाश्वहृदयंगमस्वनैः(5) ।  
+सामभिः सहचराः सहस्रशः (4)स्यन्दनाश्वहृदयंगमस्वनैः(5) ।  
 भानुमग्निपरिकीर्णतेजसं संस्तुवन्ति किरणोष्मपायिनः ॥ 8.41 ॥  
 {4.वदनैश्चः स्यन्दनस्य.5.स्वरैः.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
-सामभिः सहचराः सहस्त्रशः (4)स्यन्दनाश्वहृदयंगमस्वनैः(5) ।  
+सामभिः सहचराः सहस्रशः (4)स्यन्दनाश्वहृदयंगमस्वनैः(5) ।  
 भानुमग्निपरिकीर्णतेजसं संस्तुवन्ति किरणोष्मपायिनः ॥ 8.41 ॥  
 {4.वदनैश्चः स्यन्दनस्य.5.स्वरैः.}  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-किरणोष्मपायिनः सहस्त्रशः सहचराः अग्निपरिकीर्णतेजसं भानुं स्यन्दनाऽश्चहृदङ्गमस्वनैः समाभिः सहस्त्रशः संस्तुवन्ति ।  
+किरणोष्मपायिनः सहस्रशः सहचराः अग्निपरिकीर्णतेजसं भानुं स्यन्दनाऽश्चहृदङ्गमस्वनैः समाभिः सहस्रशः संस्तुवन्ति ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-सामभिरिति । किरणोष्मपायिनः किरणोष्माणं पिबन्तीति तथोक्ताः । तथाहारा इत्यर्थः । चरन्तीति चराः । पचाद्यच् । सहभूताश्चराः सहचरा बालखिल्यप्रभृतयो महर्षयोऽग्नौ परिकीर्ण तेजोस्य तत्तथोक्तम् ।[अग्निर्वादत्यः सायं प्रसवति] इति श्रुतेः । भानुम् । हृदयं गच्छन्तीति हृदयंगमा मनोरमाः । गमेः सुपीति वक्तव्यात्खच् । स्यन्दनाश्वानां हृदयंगमाः स्वना येषां तैः सामभिः सामवेदैः सहस्त्रशः सैस्तुवन्ति । [सामवेदेनास्तमये गीयते] इति श्रुतैः ॥ 8.41 ॥
+सामभिरिति । किरणोष्मपायिनः किरणोष्माणं पिबन्तीति तथोक्ताः । तथाहारा इत्यर्थः । चरन्तीति चराः । पचाद्यच् । सहभूताश्चराः सहचरा बालखिल्यप्रभृतयो महर्षयोऽग्नौ परिकीर्ण तेजोस्य तत्तथोक्तम् ।[अग्निर्वादत्यः सायं प्रसवति] इति श्रुतेः । भानुम् । हृदयं गच्छन्तीति हृदयंगमा मनोरमाः । गमेः सुपीति वक्तव्यात्खच् । स्यन्दनाश्वानां हृदयंगमाः स्वना येषां तैः सामभिः सामवेदैः सहस्रशः सैस्तुवन्ति । [सामवेदेनास्तमये गीयते] इति श्रुतैः ॥ 8.41 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
