--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/09.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/09.md
@@ -1268,26 +1268,26 @@ title = "०९"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सहस्त्रेण दृशामीशो (2)कुत्सिताङ्गं च सादरम् ।  
+सहस्रेण दृशामीशो (2)कुत्सिताङ्गं च सादरम् ।  
 दुर्दर्शनं ददर्शाग्निं (3)धूम्रं धूमितमण्डलम् ॥ 10.2 ॥  
 {2.द्युसदां सोऽतिसादरम्,द्युसत्संसदि सादरम्.3.धूमिल.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
-सहस्त्रेण दृशामीशो (2)कुत्सिताङ्गं च सादरम् ।  
+सहस्रेण दृशामीशो (2)कुत्सिताङ्गं च सादरम् ।  
 दुर्दर्शनं ददर्शाग्निं (3)धूम्रं धूमितमण्डलम् ॥ 10.2 ॥  
 {2.द्युसदां सोऽतिसादरम्,द्युसत्संसदि सादरम्.3.धूमिल.}  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-कुत्सिताऽङ्गं दुर्दर्शनं धूम्रधूमितमण्डलं तम् अग्निम् ईशः दृशां सहस्त्रेण सादरं ददर्श ।  
+कुत्सिताऽङ्गं दुर्दर्शनं धूम्रधूमितमण्डलं तम् अग्निम् ईशः दृशां सहस्रेण सादरं ददर्श ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-सहेति । कुत्सिताङ्गमत एव दुर्दर्शनं धूम्रं धूम्रवर्णं धूमितं संजातधूमम् । तारकादित्वादितच् । मण्डलं यस्य तमग्निमीशो महेन्द्रो दृशां सहस्त्रेण सादरं यथा तथा ददर्श दृष्टवान् ॥ 10.2 ॥
+सहेति । कुत्सिताङ्गमत एव दुर्दर्शनं धूम्रं धूम्रवर्णं धूमितं संजातधूमम् । तारकादित्वादितच् । मण्डलं यस्य तमग्निमीशो महेन्द्रो दृशां सहस्रेण सादरं यथा तथा ददर्श दृष्टवान् ॥ 10.2 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
