--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/10.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/10.md
@@ -397,24 +397,24 @@ title = "१०"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तमीक्षणमाणा क्षणमीक्षणानां सहस्त्रमाप्तुं विनेमेषमैच्छत् ।  
+तमीक्षणमाणा क्षणमीक्षणानां सहस्रमाप्तुं विनेमेषमैच्छत् ।  
 सा नन्दनालोकनमङ्गलेषु क्षणं क्षणं तृप्यति कस्य चेतः ? ॥ 11.20 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तमीक्षणमाणा क्षणमीक्षणानां सहस्त्रमाप्तुं विनेमेषमैच्छत् ।  
+तमीक्षणमाणा क्षणमीक्षणानां सहस्रमाप्तुं विनेमेषमैच्छत् ।  
 सा नन्दनालोकनमङ्गलेषु क्षणं क्षणं तृप्यति कस्य चेतः ? ॥ 11.20 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-तं क्षणम् ईक्षमाणा सा विनिमेषम् ईक्षणानां सहस्त्रम् आप्तुम् ऐच्छत् । नन्दनालोकनमङ्गलेषु क्षणं क्षणं कस्य चेतः तृप्यति ?  
+तं क्षणम् ईक्षमाणा सा विनिमेषम् ईक्षणानां सहस्रम् आप्तुम् ऐच्छत् । नन्दनालोकनमङ्गलेषु क्षणं क्षणं कस्य चेतः तृप्यति ?  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-तमिति । तं बालं क्षणमीक्षमाणावलोकमाना सा देवी विनिमेषं निगंतनिमेषमीक्षणानां नेत्राणां सहस्त्रमाप्तुं मम सहस्त्रं नेत्राणि भवन्त्वित्यैच्छदियेष । द्वाभ्यां विलोचनाभ्यामाकण्ठदर्शनजननाभावादिति भावः । तथाहि । नन्दनस्यालोकनान्येवमङ्गलानि तेषु विषये क्षणं क्षणम् प्रतिक्षणमित्यर्थः । 'नित्यवीप्सयोः' इति वीप्सायां द्विर्भावः । कस्य चेतस्तृप्यति तृप्तिं प्राप्नोति ? अपि तु न कस्यापीत्यर्थः ॥ 11.20 ॥
+तमिति । तं बालं क्षणमीक्षमाणावलोकमाना सा देवी विनिमेषं निगंतनिमेषमीक्षणानां नेत्राणां सहस्रमाप्तुं मम सहस्रं नेत्राणि भवन्त्वित्यैच्छदियेष । द्वाभ्यां विलोचनाभ्यामाकण्ठदर्शनजननाभावादिति भावः । तथाहि । नन्दनस्यालोकनान्येवमङ्गलानि तेषु विषये क्षणं क्षणम् प्रतिक्षणमित्यर्थः । 'नित्यवीप्सयोः' इति वीप्सायां द्विर्भावः । कस्य चेतस्तृप्यति तृप्तिं प्राप्नोति ? अपि तु न कस्यापीत्यर्थः ॥ 11.20 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
