--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/11.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/11.md
@@ -176,17 +176,17 @@ title = "११"
 </details>
 
 स चण्डिभृङ्गिप्रमुखैर्गरिष्ठैर्गणैरनेकैर्विविधस्वरूपैः ।  
-(3)अधिष्ठितं संसदि (4)रत्नमय्यां सहस्त्रनेत्रः(5) शिवमालुलोके ॥ 12.8 ॥  
-(3.अधिष्ठितायां यदि.4.रत्नवत्याम्.5.सहस्त्रलोकः.)  
+(3)अधिष्ठितं संसदि (4)रत्नमय्यां सहस्रनेत्रः(5) शिवमालुलोके ॥ 12.8 ॥  
+(3.अधिष्ठितायां यदि.4.रत्नवत्याम्.5.सहस्रलोकः.)  
 
 <details><summary>अन्वयः</summary>
 
-स सहस्त्रनेत्रो गरिष्ठैः अनेकैः विविधस्वरूपैः चण्‍डिभृङ्गिप्रमुखैः गणैः रत्नमय्यां संसदि अधिष्ठितं शिवम् आलुलोके ।  
+स सहस्रनेत्रो गरिष्ठैः अनेकैः विविधस्वरूपैः चण्‍डिभृङ्गिप्रमुखैः गणैः रत्नमय्यां संसदि अधिष्ठितं शिवम् आलुलोके ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-स इति । स सहस्त्रनेत्र इन्द्रो गरिष्ठैरतिशयेन गुरुभिः । 'प्रियस्थिरे-' त्यादिना गुरुशब्दस्य गरादेशः । अनेकैर्बहुभिर्विविधस्वरूपैर्नानाकृतिभिश्चण्डिभृङ्गिप्रमुखैर्गणैः रत्नमय्यां रत्नप्रचुरायाम् । प्राचुर्ये मयट् । 'टिड्ढे-'ति ङीप् । संसदि सभायामधिष्ठितमुपविष्टं शिवमालुलोके ददर्श । इह 'अधिशीङ्-' इत्याधारस्य कर्मत्वप्रसङ्गो दुर्निवारः । अत एव रत्नमयीं सभां तामिति प्रतिष्ठितमिति वा पठनीयम् । यथास्थितविन्यासे दूषणोद्धारं सुधियो विभावयन्त्विति ॥ 12.8 ॥
+स इति । स सहस्रनेत्र इन्द्रो गरिष्ठैरतिशयेन गुरुभिः । 'प्रियस्थिरे-' त्यादिना गुरुशब्दस्य गरादेशः । अनेकैर्बहुभिर्विविधस्वरूपैर्नानाकृतिभिश्चण्डिभृङ्गिप्रमुखैर्गणैः रत्नमय्यां रत्नप्रचुरायाम् । प्राचुर्ये मयट् । 'टिड्ढे-'ति ङीप् । संसदि सभायामधिष्ठितमुपविष्टं शिवमालुलोके ददर्श । इह 'अधिशीङ्-' इत्याधारस्य कर्मत्वप्रसङ्गो दुर्निवारः । अत एव रत्नमयीं सभां तामिति प्रतिष्ठितमिति वा पठनीयम् । यथास्थितविन्यासे दूषणोद्धारं सुधियो विभावयन्त्विति ॥ 12.8 ॥
 </details>
 
 (6)कपर्द(7)मुद्वद्धमहीनमूर्धरत्नांशुभिर्भासुरमुल्लसद्भिः ।  
@@ -196,7 +196,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-उद्बद्धुम् उल्लसद्भिः अहीनमूर्धरत्नांऽशुभिः भासुरम् उच्चैस्तरं कपर्दं दधानम् इद्धधातोः सुमेरुश्रृङ्गस्य समत्वम् आप्तम् (शिवं सहस्त्रनेत्र आलुलोके) ।  
+उद्बद्धुम् उल्लसद्भिः अहीनमूर्धरत्नांऽशुभिः भासुरम् उच्चैस्तरं कपर्दं दधानम् इद्धधातोः सुमेरुश्रृङ्गस्य समत्वम् आप्तम् (शिवं सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -220,7 +220,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-उत्तुङ्गतरङ्गमालां जटाजूटतटं भजन्तीं शरदभ्रसुभ्रैः स्वफेनैः तदुत्सङ्गजुषं गौरीं हसन्तीम् इव गङ्गां बिभ्राणम् (शिवं सहस्त्रनेत्र आलुलोके ।)  
+उत्तुङ्गतरङ्गमालां जटाजूटतटं भजन्तीं शरदभ्रसुभ्रैः स्वफेनैः तदुत्सङ्गजुषं गौरीं हसन्तीम् इव गङ्गां बिभ्राणम् (शिवं सहस्रनेत्र आलुलोके ।)  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -244,7 +244,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-गङ्गातरङ्गप्रतिबिम्बितैः स्वैः बहूभवन्तं सुधांऽशुं शिरसा उद्वहन्तं तुषारगौरैः चलन्मरीचिप्रचयैः हिमद्यौतितम् (शिवं सहस्त्रनेत्र आलुलोके) ।  
+गङ्गातरङ्गप्रतिबिम्बितैः स्वैः बहूभवन्तं सुधांऽशुं शिरसा उद्वहन्तं तुषारगौरैः चलन्मरीचिप्रचयैः हिमद्यौतितम् (शिवं सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -268,7 +268,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-भालस्थले एधमानधामाऽधरीभूतरवीन्दुनेत्रं, युगाऽन्तकालोचितहव्य वाहं मीन ध्वजप्रोषणं लोचनम् आदधानम् (शिवं सहस्त्रनेत्र आलुलोके) ।  
+भालस्थले एधमानधामाऽधरीभूतरवीन्दुनेत्रं, युगाऽन्तकालोचितहव्य वाहं मीन ध्वजप्रोषणं लोचनम् आदधानम् (शिवं सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -292,7 +292,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-महार्हरत्नाऽञ्चितयोः समन्तात् उदारं स्फुरत्प्रभामण्डलयोः कुण्डलयोः छलेन कर्णस्थिताभ्यां शशिभास्कराभ्याम् उपासितम् (शिवं सहस्त्रनेत्र आलुलोके) ।  
+महार्हरत्नाऽञ्चितयोः समन्तात् उदारं स्फुरत्प्रभामण्डलयोः कुण्डलयोः छलेन कर्णस्थिताभ्यां शशिभास्कराभ्याम् उपासितम् (शिवं सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -316,7 +316,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-परिस्फुरन्त्या नीलस्य कण्ठस्य महत्या कान्त्या कुतुकेन स्वबुद्धया नीलमाणिक्यमय्या गौर्याः कण्ठिकया इव सुविराजमानम् (शिवं सहस्त्रनेत्र आलुलोक) ॥  
+परिस्फुरन्त्या नीलस्य कण्ठस्य महत्या कान्त्या कुतुकेन स्वबुद्धया नीलमाणिक्यमय्या गौर्याः कण्ठिकया इव सुविराजमानम् (शिवं सहस्रनेत्र आलुलोक) ॥  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -340,7 +340,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-कालार्दितानां त्रिदशाऽमुराणां चितारजोभिः परिपाण्डुरङ्गं, महन्महेभाऽजिनं दधानम् उद्गताऽभ्रप्रालेयशैलश्रियम् उद्वहन्तम् (शिवं सहस्त्रनेत्र आलुलोके) ।  
+कालार्दितानां त्रिदशाऽमुराणां चितारजोभिः परिपाण्डुरङ्गं, महन्महेभाऽजिनं दधानम् उद्गताऽभ्रप्रालेयशैलश्रियम् उद्वहन्तम् (शिवं सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -364,7 +364,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-पाणिस्थितब्रह्मकपालपात्रं वैकुण्ठभाजा अपि निषेव्यमाणं, नराऽस्थिखण्डाभरणं रणाऽन्तमूलं त्रिशूलम् उच्चैः कलयन्तम् (शिवं सहस्त्रनेत्र आलुलोके) ।  
+पाणिस्थितब्रह्मकपालपात्रं वैकुण्ठभाजा अपि निषेव्यमाणं, नराऽस्थिखण्डाभरणं रणाऽन्तमूलं त्रिशूलम् उच्चैः कलयन्तम् (शिवं सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -388,7 +388,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-मुकुटेन्दुवर्षत्सुधाभरौधाप्लवलब्धसंज्ञाम् (अत एव) आश्वसन्तीं पुनः उद्गीतवेदां पुरातनीं ब्रह्मकपालमालां कण्ठे वहन्तम् (शिवं सहस्त्रनेत्र आलुलोके) ।  
+मुकुटेन्दुवर्षत्सुधाभरौधाप्लवलब्धसंज्ञाम् (अत एव) आश्वसन्तीं पुनः उद्गीतवेदां पुरातनीं ब्रह्मकपालमालां कण्ठे वहन्तम् (शिवं सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -412,7 +412,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-नवाऽष्टापदवल्लिभासा सलीलम् अङ्कस्थितया गिरीन्द्रपुत्र्या परिस्फुरन्त्या अचिररोचिषा शरदभ्रखण्डम् इव विराजमानम् (शिवम् सहस्त्रनेत्र आलुलोके) ।  
+नवाऽष्टापदवल्लिभासा सलीलम् अङ्कस्थितया गिरीन्द्रपुत्र्या परिस्फुरन्त्या अचिररोचिषा शरदभ्रखण्डम् इव विराजमानम् (शिवम् सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -436,7 +436,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-दृप्ताऽन्धकप्राणहरं महाऽसुरस्त्रीविधवत्वहेतुं पुरास्मरप्लोषणकेलिकारम् अन्यैः अगृह्यं पिनाकं करेण गृह्णान्तम् (शिवं सहस्त्रनेत्र आलुलोके) ।  
+दृप्ताऽन्धकप्राणहरं महाऽसुरस्त्रीविधवत्वहेतुं पुरास्मरप्लोषणकेलिकारम् अन्यैः अगृह्यं पिनाकं करेण गृह्णान्तम् (शिवं सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -460,7 +460,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-महार्हमाणिक्यविभङ्गिचित्रं भद्रासनं काञ्चनपादपीठम् अधिष्ठितम् पुनः चन्द्रमरीचिगौरैः चमरैः गणाभ्याम् उद्वीज्यमानम् (शिवं सहस्त्रनेत्र आलुलोके)।  
+महार्हमाणिक्यविभङ्गिचित्रं भद्रासनं काञ्चनपादपीठम् अधिष्ठितम् पुनः चन्द्रमरीचिगौरैः चमरैः गणाभ्याम् उद्वीज्यमानम् (शिवं सहस्रनेत्र आलुलोके)।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -484,7 +484,7 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-शस्त्राऽस्त्रविद्याऽभ्यसनैकसक्ते गणैः एत्य सविस्मयैः (सद्भिः) सुदृष्टे (तथा) स्फटिकाऽचलेन नीराज्यमाने कुमारे सानन्दनिर्दिष्टदृशम् (शिवं सहस्त्रनेत्र आलुलोके) ।  
+शस्त्राऽस्त्रविद्याऽभ्यसनैकसक्ते गणैः एत्य सविस्मयैः (सद्भिः) सुदृष्टे (तथा) स्फटिकाऽचलेन नीराज्यमाने कुमारे सानन्दनिर्दिष्टदृशम् (शिवं सहस्रनेत्र आलुलोके) ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -518,50 +518,50 @@ title = "११"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-विकरस्वराभ्भोजवनश्रिया तं दृशं सहस्त्रेण (2)निरीक्षमाणः ।  
+विकरस्वराभ्भोजवनश्रिया तं दृशं सहस्रेण (2)निरीक्षमाणः ।  
 (3)रोमालिभिः स्वर्गपतिर्बभासे पुष्पोत्कराकीर्ण(4)इवाम्रशाखी ॥ 12.23 ॥  
 {2.निरीक्ष्यमाणः.3.सर्वांगनेत्रो द्युपति;सर्वांजनेन द्युपतिः.4.अग्रशाखी.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
-विकरस्वराभ्भोजवनश्रिया तं दृशं सहस्त्रेण (2)निरीक्षमाणः ।  
+विकरस्वराभ्भोजवनश्रिया तं दृशं सहस्रेण (2)निरीक्षमाणः ।  
 (3)रोमालिभिः स्वर्गपतिर्बभासे पुष्पोत्कराकीर्ण(4)इवाम्रशाखी ॥ 12.23 ॥  
 {2.निरीक्ष्यमाणः.3.सर्वांगनेत्रो द्युपति;सर्वांजनेन द्युपतिः.4.अग्रशाखी.}  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-स्वर्गपतिः विकास्वराऽभ्भोजवनश्रिया दृशां सहस्त्रेण तं निरीक्षमाणः (सन्) रोमालिभिः पुष्पोत्कराकीर्णः आम्रशाखी इव बभासे ।  
+स्वर्गपतिः विकास्वराऽभ्भोजवनश्रिया दृशां सहस्रेण तं निरीक्षमाणः (सन्) रोमालिभिः पुष्पोत्कराकीर्णः आम्रशाखी इव बभासे ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-विकस्वरेति । स्वर्गपतिर्महेन्द्रः । विकस्वराणां प्रफुल्लानामम्भोजानां वनस्य श्रीरिव श्रीः शोभा यस्य तथाभूतेन दृशां नेत्राणां सहस्त्रेण तं महेश्वरं निरीक्षमाणो विलोकमानः सन् । रोम्णामालिभिः समूहैर्निमित्तैः पुष्पाणामुत्करेण समूहेनाकीर्ण आसमन्तादव्याप्त आम्रशाख्याम्रवृक्ष इव बभासे शुशुभे । उपमालंकारः ॥ 12.23 ॥
+विकस्वरेति । स्वर्गपतिर्महेन्द्रः । विकस्वराणां प्रफुल्लानामम्भोजानां वनस्य श्रीरिव श्रीः शोभा यस्य तथाभूतेन दृशां नेत्राणां सहस्रेण तं महेश्वरं निरीक्षमाणो विलोकमानः सन् । रोम्णामालिभिः समूहैर्निमित्तैः पुष्पाणामुत्करेण समूहेनाकीर्ण आसमन्तादव्याप्त आम्रशाख्याम्रवृक्ष इव बभासे शुशुभे । उपमालंकारः ॥ 12.23 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-दृष्ट्वा सहस्त्रेण दृशां महेशमभूत्कृतार्थोऽति(5)तरां महेन्द्रः ।  
+दृष्ट्वा सहस्रेण दृशां महेशमभूत्कृतार्थोऽति(5)तरां महेन्द्रः ।  
 (6)सर्वाङ्गजातं तदथो (7)विरूपमिव(8) (9)प्रियाकोपकरं विवेद ॥ 12.24 ॥  
 {5.खलु तेन शक्रः.6.सर्वाङ्ग जातं विकलम्;सर्वाङ्गजानेतदनम्.7.विपूरम्.8.पुरा.9.प्रियालोकपरम्;प्रियाकोपपरः.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
-दृष्ट्वा सहस्त्रेण दृशां महेशमभूत्कृतार्थोऽति(5)तरां महेन्द्रः ।  
+दृष्ट्वा सहस्रेण दृशां महेशमभूत्कृतार्थोऽति(5)तरां महेन्द्रः ।  
 (6)सर्वाङ्गजातं तदथो (7)विरुपमिव(8) (9)प्रियाकोपकरं विवेद ॥ 12.24 ॥  
 {5.खलु तेन शक्रः.6.सर्वाङ्ग जातं विकलम्;सर्वाङ्गजानेतदनम्.7.विपूरम्.8.पुरा.9.प्रियालोकपरम्;प्रियाकोपपरः.}  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-दृशां सहस्त्रेण महेशं दृष्ट्वा महेन्द्रः अतितरां कृताऽर्थः अभूत् । अथो तत् सर्वाऽङ्गजातं विरूपं प्रियाकोपकरम् इव विवेद ।  
+दृशां सहस्रेण महेशं दृष्ट्वा महेन्द्रः अतितरां कृताऽर्थः अभूत् । अथो तत् सर्वाऽङ्गजातं विरूपं प्रियाकोपकरम् इव विवेद ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-दृष्ट्वेति । दृशां सहस्त्रेण महेशं शिवं दृष्ट्वा महेन्द्र इन्द्रोऽतितरामतिशयं कृतार्थः कृतकृत्योऽभूत् । अथोऽनन्तरं तत्सर्वाङ्गजातं सर्वेष्वङ्गेषु भूतं विरूपं रोमाञ्चजनितवैरुप्यं प्रियायाः शच्याः कोपकरं क्रोधविधायीव विवेद जज्ञे । सपत्नीसम्बन्धजनितत्वशङ्काकुलत्वादिति भावः ॥ 12.24 ॥
+दृष्ट्वेति । दृशां सहस्रेण महेशं शिवं दृष्ट्वा महेन्द्र इन्द्रोऽतितरामतिशयं कृतार्थः कृतकृत्योऽभूत् । अथोऽनन्तरं तत्सर्वाङ्गजातं सर्वेष्वङ्गेषु भूतं विरूपं रोमाञ्चजनितवैरुप्यं प्रियायाः शच्याः कोपकरं क्रोधविधायीव विवेद जज्ञे । सपत्नीसम्बन्धजनितत्वशङ्काकुलत्वादिति भावः ॥ 12.24 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -590,30 +590,30 @@ title = "११"
 
 अथ युग्मेनाह-  
 श्रीनीलकण्ठ द्युपतिः पुरोऽस्ति (1)त्वयि प्रणामावसरं (2)प्रतीच्छन् ।  
-(3)सहस्त्रनेत्रेऽत्र भव त्रिनेत्र (4)दृष्ट्या प्रसाद(5) प्रगुणो (6)महेश ॥ 12.26 ॥  
+(3)सहस्रनेत्रेऽत्र भव त्रिनेत्र (4)दृष्ट्या प्रसाद(5) प्रगुणो (6)महेश ॥ 12.26 ॥  
 इति प्रबद्धाञ्जलिरेत्य नन्दी निधाय कक्षामभिः हेम(7) नेत्रम् ।  
 प्रसादपात्रं पुरतो (8)भविष्णुरथ स्मरारातिमुवाच वाचम् ॥ 12.27 ॥  
-{1.तय.2.च पृच्छन्,प्रतीक्षन्.3.सहस्त्रनेत्रोऽत्र भव त्रिनेत्र,सहस्त्रनेत्रं प्रसर त्रिनेत्र.4.दृष्ट्वा.5.प्रणवः.6.महेशः.7.हेमदण्डम्.8.भविष्णुमन्धन्धकारातिम्,भविष्णुरधिस्मरारातिम्.}  
+{1.तय.2.च पृच्छन्,प्रतीक्षन्.3.सहस्रनेत्रोऽत्र भव त्रिनेत्र,सहस्रनेत्रं प्रसर त्रिनेत्र.4.दृष्ट्वा.5.प्रणवः.6.महेशः.7.हेमदण्डम्.8.भविष्णुमन्धन्धकारातिम्,भविष्णुरधिस्मरारातिम्.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
 अथ युग्मेनाह-  
 श्रीनीलकण्ठ द्युपतिः पुरोऽस्ति (1)त्वयि प्रणामावसरं (2)प्रतीच्छन् ।  
-(3)सहस्त्रनेत्रेऽत्र भव त्रिनेत्र (4)दृष्ट्या प्रसाद(5) प्रगुणो (6)महेश ॥ 12.26 ॥  
+(3)सहस्रनेत्रेऽत्र भव त्रिनेत्र (4)दृष्ट्या प्रसाद(5) प्रगुणो (6)महेश ॥ 12.26 ॥  
 इति प्रबद्धाञ्जलिरेत्य नन्दी निधाय कक्षामभिः हेम(7) नेत्रम् ।  
 प्रसादपात्रं पुरतो (8)भविष्णुरथ स्मरारातिमुवाच वाचम् ॥ 12.27 ॥  
-{1.तय.2.च पृच्छन्,प्रतीक्षन्.3.सहस्त्रनेत्रोऽत्र भव त्रिनेत्र,सहस्त्रनेत्रं प्रसर त्रिनेत्र.4.दृष्ट्वा.5.प्रणवः.6.महेशः.7.हेमदण्डम्.8.भविष्णुमन्धन्धकारातिम्,भविष्णुरधिस्मरारातिम्.}  
+{1.तय.2.च पृच्छन्,प्रतीक्षन्.3.सहस्रनेत्रोऽत्र भव त्रिनेत्र,सहस्रनेत्रं प्रसर त्रिनेत्र.4.दृष्ट्वा.5.प्रणवः.6.महेशः.7.हेमदण्डम्.8.भविष्णुमन्धन्धकारातिम्,भविष्णुरधिस्मरारातिम्.}  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-अथ नन्दी पुरतः प्रसादपात्रं भविष्णुः एत्य कक्षाम् अभि हेमवेत्रं निधाय प्रबद्धाऽञ्जलिः (सन्) स्मराऽरातिं श्रीनीलकण्ठ ! द्युपतिः त्वयि प्रणामाऽवसरं प्रतीच्छन् पुरः अस्ति (अतः) हे त्रिनेत्र ! हे महेश ! अत्र सहस्त्रनेत्रे दृष्ट्या प्रसादप्रगुणो भव इति वाचम् उवाच ।  
+अथ नन्दी पुरतः प्रसादपात्रं भविष्णुः एत्य कक्षाम् अभि हेमवेत्रं निधाय प्रबद्धाऽञ्जलिः (सन्) स्मराऽरातिं श्रीनीलकण्ठ ! द्युपतिः त्वयि प्रणामाऽवसरं प्रतीच्छन् पुरः अस्ति (अतः) हे त्रिनेत्र ! हे महेश ! अत्र सहस्रनेत्रे दृष्ट्या प्रसादप्रगुणो भव इति वाचम् उवाच ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-श्रीति । इतीति । अथ नन्दी गणः पुरतः सर्वेभ्योऽग्रगामितयेन्द्राधिष्ठितकक्षामारभ्य महेश्वराधिश्रितमन्दिरपर्यन्तमहंपूर्विकया । बहुविधगणगणसुरगणावृत्ते मध्यगतदेशेऽहंपूर्विकावलम्बेनेति तात्पर्यार्थः । प्रसादस्येन्द्रागमनिवेदनमुदन्धेनान्धकारिणा दत्तपारितोषिकरुपस्य पात्रं योग्यो भविष्णुर्भवितुमिच्छुः सन्नेत्य । अन्तरिति शेषः । तथा कक्षां द्वारमभि संमुखं हेमवेत्रं सौवर्णयष्टिकां निधाय संस्थाप्य । इयं वेत्रधारिणो रीतिर्वर्णिता । प्रबद्धाञ्जलिः सन्स्मरारातिं महेश्वरम् । भो श्रीयुक्तनीलकण्ठ सपार्वतीक महेश्वर । द्युपतिरिन्द्रस्त्वयि भवति प्रणामावसरं प्रणतिसमयं प्रतीच्छन्प्रतीक्षमाणः पुरोऽग्रेऽस्ति विद्यते । महेश्वरं प्रणिनंसुः सन्बहिरास्त इत्यर्थः । अतो हे त्रिनेत्र, भो महेश, अत्र पुरोवतिंनि सहस्त्रनेत्र इन्द्रे दृष्ट्या दर्शनेन प्रसादप्रगुणः प्रसादविधानानुकूलो भव । आत्मीयदर्शनरूपं प्रसादं तदुपरि कुर्वित्यर्थः । इत्येवंभूतां वाचमुवाचोक्तवान् ॥ 12.26 - 12.27 ॥
+श्रीति । इतीति । अथ नन्दी गणः पुरतः सर्वेभ्योऽग्रगामितयेन्द्राधिष्ठितकक्षामारभ्य महेश्वराधिश्रितमन्दिरपर्यन्तमहंपूर्विकया । बहुविधगणगणसुरगणावृत्ते मध्यगतदेशेऽहंपूर्विकावलम्बेनेति तात्पर्यार्थः । प्रसादस्येन्द्रागमनिवेदनमुदन्धेनान्धकारिणा दत्तपारितोषिकरुपस्य पात्रं योग्यो भविष्णुर्भवितुमिच्छुः सन्नेत्य । अन्तरिति शेषः । तथा कक्षां द्वारमभि संमुखं हेमवेत्रं सौवर्णयष्टिकां निधाय संस्थाप्य । इयं वेत्रधारिणो रीतिर्वर्णिता । प्रबद्धाञ्जलिः सन्स्मरारातिं महेश्वरम् । भो श्रीयुक्तनीलकण्ठ सपार्वतीक महेश्वर । द्युपतिरिन्द्रस्त्वयि भवति प्रणामावसरं प्रणतिसमयं प्रतीच्छन्प्रतीक्षमाणः पुरोऽग्रेऽस्ति विद्यते । महेश्वरं प्रणिनंसुः सन्बहिरास्त इत्यर्थः । अतो हे त्रिनेत्र, भो महेश, अत्र पुरोवतिंनि सहस्रनेत्र इन्द्रे दृष्ट्या दर्शनेन प्रसादप्रगुणः प्रसादविधानानुकूलो भव । आत्मीयदर्शनरूपं प्रसादं तदुपरि कुर्वित्यर्थः । इत्येवंभूतां वाचमुवाचोक्तवान् ॥ 12.26 - 12.27 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -644,14 +644,14 @@ title = "११"
 
 किरीटकोटिच्युतपारिजात (1)पुष्पोत्करेणानमितेन मूर्ध्ना ।  
 (2)स्वर्गैकवन्द्यो (3)जगदेकवन्द्यं तं देवदेवं प्रणनाम देवः ॥ 12.29 ॥  
-{1.पुष्पेण भक्त्या.2.स्वर्गौकवन्द्यः.3.जगदेकदेवं ननाम देवः स सहस्त्रनेत्रः.}  
+{1.पुष्पेण भक्त्या.2.स्वर्गौकवन्द्यः.3.जगदेकदेवं ननाम देवः स सहस्रनेत्रः.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
 किरीटकोटिच्युतपारिजात (1)पुष्पोत्करेणानमितेन मूर्ध्ना ।  
 (2)स्वर्गैकवन्द्यो (3)जगदेकवन्द्यं तं देवदेवं प्रणनाम देवः ॥ 12.29 ॥  
-{1.पुष्पेण भक्त्या.2.स्वर्गौकवन्द्यः.3.जगदेकदेवं ननाम देवः स सहस्त्रनेत्रः.}  
+{1.पुष्पेण भक्त्या.2.स्वर्गौकवन्द्यः.3.जगदेकदेवं ननाम देवः स सहस्रनेत्रः.}  
 </details>
 
 <details><summary>अन्वयः</summary>
