--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/12.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/12.md
@@ -417,26 +417,26 @@ continue to august
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-(1)सान्द्रप्रमोदात्पुलकोपगूढः सर्वाङ्ग(2)संफुल्लसहस्त्रनेत्रः ।  
+(1)सान्द्रप्रमोदात्पुलकोपगूढः सर्वाङ्ग(2)संफुल्लसहस्रनेत्रः ।  
 तस्योत्तरीयेण निजाम्बरेण (3)निरुञ्छनचारु चकार शक्रः ॥ 13.18 ॥  
 {1.सान्द्रप्रमोदः.2.संलग्न.3.निर्मञ्छनम्,निरुहणम्,निरुञ्छनम्.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
-(1)सान्द्रप्रमोदात्पुलकोपगूढः सर्वाङ्ग(2)संफुल्लसहस्त्रनेत्रः ।  
+(1)सान्द्रप्रमोदात्पुलकोपगूढः सर्वाङ्ग(2)संफुल्लसहस्रनेत्रः ।  
 तस्योत्तरीयेण निजाम्बरेण (3)निरुञ्छनचारु चकार शक्रः ॥ 13.18 ॥  
 {1.सान्द्रप्रमोदः.2.संलग्न.3.निर्मञ्छनम्,निरुहणम्,निरुञ्छनम्.}  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-सान्द्रप्रमोदात् पुलकोपगूढः सर्वांऽङ्गसंफुल्लसहस्त्रनेत्रः शक्रः तस्य उत्तरीयेण निजाऽम्बरेणा निरुञ्छनं चारु चकार ।  
+सान्द्रप्रमोदात् पुलकोपगूढः सर्वांऽङ्गसंफुल्लसहस्रनेत्रः शक्रः तस्य उत्तरीयेण निजाऽम्बरेणा निरुञ्छनं चारु चकार ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-सान्द्रेति । सान्द्रप्रमोदाद्धनानन्दाद्धेतोः पुलकै रोमाञ्चैरूपगूढ आश्लिष्टः । 'पुलकः कृमिभेदेऽश्मभेदे च मणिदोषके । रोमाञ्चै हरिताले गजात्तपिण्डे च गन्धके । इति मेदिनी । तथा सर्वेष्वङ्गेषु संफुल्लानि सहस्त्रनेत्राणि यस्य । यतः । सहस्त्राक्षस्तथाभूतः शक्र इन्द्रस्तस्य कुमारस्योत्तरीयेण संव्यानेन । संव्यानमुत्तरीयं स्यात्' इत्यमरः । तथा निजाम्बरेण निरुञ्छनं परिवर्तनं चारु चकार । भ्रातृभावायान्योन्यवस्त्रग्रहणं चक्रतुरित्यर्थः । तदुक्तं मेदिन्याम्- 'निरुञ्छनं बन्धुतायै वाससः परिवर्तनम्' इति । लोकेऽपि भ्रातृतायै परस्योष्णिग्बन्धनव्यवहारस्तद्वदत्रापीति अनुशासने सामान्यतो वासोग्रहणेन प्रकृत उत्तरीयग्रहणं सङ्गच्छते । लोकव्यवहारस्तु संप्रदायसिद्धः । उष्णिहि विशेषश्रैष्ठ्योपलम्भ एव व्यवहारमूलमिति मन्तव्यम् ॥ 13.18 ॥
+सान्द्रेति । सान्द्रप्रमोदाद्धनानन्दाद्धेतोः पुलकै रोमाञ्चैरूपगूढ आश्लिष्टः । 'पुलकः कृमिभेदेऽश्मभेदे च मणिदोषके । रोमाञ्चै हरिताले गजात्तपिण्डे च गन्धके । इति मेदिनी । तथा सर्वेष्वङ्गेषु संफुल्लानि सहस्रनेत्राणि यस्य । यतः । सहस्राक्षस्तथाभूतः शक्र इन्द्रस्तस्य कुमारस्योत्तरीयेण संव्यानेन । संव्यानमुत्तरीयं स्यात्' इत्यमरः । तथा निजाम्बरेण निरुञ्छनं परिवर्तनं चारु चकार । भ्रातृभावायान्योन्यवस्त्रग्रहणं चक्रतुरित्यर्थः । तदुक्तं मेदिन्याम्- 'निरुञ्छनं बन्धुतायै वाससः परिवर्तनम्' इति । लोकेऽपि भ्रातृतायै परस्योष्णिग्बन्धनव्यवहारस्तद्वदत्रापीति अनुशासने सामान्यतो वासोग्रहणेन प्रकृत उत्तरीयग्रहणं सङ्गच्छते । लोकव्यवहारस्तु संप्रदायसिद्धः । उष्णिहि विशेषश्रैष्ठ्योपलम्भ एव व्यवहारमूलमिति मन्तव्यम् ॥ 13.18 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
