--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/16.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/16.md
@@ -734,7 +734,7 @@ title = "१६"
 
 विध्वस्य तेन सुरसैन्यमहापताका  
 नीता (3)नभस्थलमलं नवमल्लिकाभाः ।  
-स्वर्गापगाजलमहौघसहस्त्रलीलां  
+स्वर्गापगाजलमहौघसहस्रलीलां  
 व्यातेनिरे दिवि(4) सिताम्बरकैतवेन ॥ 17.28 ॥  
 {3.नभस्तलम्.4.दिविचरी चिरविभ्रपेण,दिवि चराचरबि भ्रमेण.}  
 </details>
@@ -743,19 +743,19 @@ title = "१६"
 
 विध्वस्य तेन सुरसैन्यमहापताका  
 नीता (3)नभस्थलमलं नवमल्लिकाभाः ।  
-स्वर्गापगाजलमहौघसहस्त्रलीलां  
+स्वर्गापगाजलमहौघसहस्रलीलां  
 व्यातेनिरे दिवि(4) सिताम्बरकैतवेन ॥ 17.28 ॥  
 {3.नभस्तलम्.4.दिविचरी चिरविभ्रपेण,दिवि चराचरबि भ्रमेण.}  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-तेन अलं विध्वस्यनभः स्थलं नीताः (तथा) नवमल्लिकाभाः सुरसैन्यमहापताकाः सिताऽम्बरकैतवेन स्वर्गापगाजलमहौधसहस्त्रलीलां दिवि व्यातेनिरे ।  
+तेन अलं विध्वस्यनभः स्थलं नीताः (तथा) नवमल्लिकाभाः सुरसैन्यमहापताकाः सिताऽम्बरकैतवेन स्वर्गापगाजलमहौधसहस्रलीलां दिवि व्यातेनिरे ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-विध्वस्येति । तेन प्रभञ्जनेन कर्त्रा विध्वस्य भञ्जयित्वा नभः- स्थलमाकशतलं नीताः प्रापिताः । तथा नवमल्लिकाभा नूतनविदलन्मल्लिकाकुसुमसदृशभासः सुरसैन्यस्य महान्त्यः पताकाः सिताम्बरकैतवेन श्वेतवस्त्रव्याजेन स्वर्गापगाया जलस्य महतामोघानां पूराणां सहस्त्रस्य लीलां शोभां व्यातेनिरे वितस्तरिरे । उत्पतन्त्या व्योमनि स्थिताः श्वेताः पताका अतिविदूरदोषेण अलघवोऽपि लघव इव प्रतीयमाना नभोगतगगनवाहिनीनिर्झरा इव रेजुरिति भावः । अत्र कैतवापह्नुतिनिदर्शनालंकारयोः संसृष्टिः ॥ 17.28 ॥
+विध्वस्येति । तेन प्रभञ्जनेन कर्त्रा विध्वस्य भञ्जयित्वा नभः- स्थलमाकशतलं नीताः प्रापिताः । तथा नवमल्लिकाभा नूतनविदलन्मल्लिकाकुसुमसदृशभासः सुरसैन्यस्य महान्त्यः पताकाः सिताम्बरकैतवेन श्वेतवस्त्रव्याजेन स्वर्गापगाया जलस्य महतामोघानां पूराणां सहस्रस्य लीलां शोभां व्यातेनिरे वितस्तरिरे । उत्पतन्त्या व्योमनि स्थिताः श्वेताः पताका अतिविदूरदोषेण अलघवोऽपि लघव इव प्रतीयमाना नभोगतगगनवाहिनीनिर्झरा इव रेजुरिति भावः । अत्र कैतवापह्नुतिनिदर्शनालंकारयोः संसृष्टिः ॥ 17.28 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
